CM-922: Remove mui components (#1291)
* CM-922: Remove mui link component

* CM-923: Remove mui breadcrumbs component

* CM-949: Remove mui icons

* CM-925: Remove mui container, grid, box, card component

* CM-924: Remove mui text field, input field, checkbox component

* CM-926: Remove mui misc components

* NOBUG: Code clean up

--- a/src/gatsby/src/styles/cmsSnippets/parkInfoPage.scss
+++ b/src/gatsby/src/styles/cmsSnippets/parkInfoPage.scss
@@ -24,7 +24,7 @@
   }
 }
 
-.MuiTypography-root.expand-link.expand-icon,
+.expand-link.expand-icon,
 .park-overview-link.expand-icon {
   display: inline-block;
   color: $colorBlueMed !important;
@@ -34,6 +34,12 @@
   &:hover, &:focus-visible {
     color: $colorBlue !important;
     text-decoration: underline !important;
+  }
+  &:focus-visible {
+    border-radius: 4px;
+    border: $colorWhite solid 2px;
+    outline: $colorBlueMed solid 2px;
+    outline-offset: 0px;
   }
   i {
     color: inherit;
