--- a/src/gatsby/src/styles/staticContent1.scss
+++ b/src/gatsby/src/styles/staticContent1.scss
@@ -34,7 +34,7 @@
       background-color: $colorWhite !important;
     }
   }
-  a:not(.btn):not(.nav-link) {
+  a:not(.btn):not(.nav-link):not(.badge) {
     color: $colorBlueMed;
     text-decoration: underline;
     &:hover, &:active, &:focus {
