--- a/src/gatsby/src/styles/parks.scss
+++ b/src/gatsby/src/styles/parks.scss
@@ -83,21 +83,6 @@
   background-color: $colorBackgroundGrey !important;
 }
 
-.grey-background .MuiPaper-root,
-.grey-background .MuiBox-root {
-  background-color: transparent;
-
-  .red-alert {
-    background-color: $colorBackgroundGrey !important;
-  }
-
-  &.bc-bg-yellow {
-    background-color: $colorGold;
-  }
-}
-
-
-
 #park-menu-mobile {
   position: sticky;
   position: -webkit-sticky;
@@ -123,36 +108,9 @@
 }
 
 // Breadcrumbs
-
 .breadcrumb-text {
   color: $colorGrey !important;
 }
-
-.MuiBreadcrumbs-separator {
-  color: $colorGrey !important;
-  font-size: 1.25rem !important;
-  margin-bottom: 2px;
-}
-
-.MuiBreadcrumbs-root {
-  a {
-    color: $colorBlueMed;
-    &:hover, &:focus-visible {
-      color: $colorBlueMed;
-      text-decoration: underline;
-    }
-    &:focus {
-      color: $colorBlueMed;
-    }
-    &:focus-visible {
-      border: $colorWhite solid 2px;
-      outline: $colorBlueMed solid 2px;
-      outline-offset: 0px;
-      border-radius: 4px;
-    }
-  }
-}
-
 
 // Unsure if this is ever used
 #park-about-container {
@@ -179,6 +137,16 @@
 
 
 // Photo gallery display
+.park-photo-gallery {
+  hr {
+    border-color: $colorGreyLight;
+    margin: 2rem 0;
+  }
+  .park-photo-gallery-container {
+    max-width: none;
+    cursor: pointer;
+  }
+}
 
 .park-photo {
   height: 150px;
@@ -191,81 +159,48 @@
   @media (min-width: $lgBreakpoint) {
     height: 400px;
   }
-  overflow: hidden;
-  position: relative;
-
-  img {
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    margin: 0;
-    max-width: none;
-    object-fit: cover;
-    padding: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 100%;
-  }
-
   &--small {
     height: 196px;
   }
-
-  &--big {
-    margin-top: 4px;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
 .show-photos {
-  text-align: right;
-  margin-top: -70px;
-  margin-right: 30px;
   position: absolute;
+  right: 16px;
+  bottom: 16px;
   z-index: 100;
-  right: 0;
-}
-
-.show-photos-5 {
-  text-align: right;
-  margin-top: 340px;
-  margin-right: 30px;
-  position: absolute;
-  z-index: 100;
-  right: 0;
-}
-
-.show-photo-button {
-  color: $colorWhite;
-  background-color: rgba($colorGrey, 0.5);
-  border: transparent solid 2px;
-  &:hover, &:focus-visible {
+  @media (min-width: $lgBreakpoint) {
+    right: 32px;
+    bottom: 32px;
+  }
+  .show-photo-button {
     color: $colorWhite;
-    background-color: $colorGrey;
+    background-color: rgba($colorGrey, 0.5);
+    border: transparent solid 2px;
+    &:hover, &:focus-visible {
+      color: $colorWhite;
+      background-color: $colorGrey;
+    }
+    &:hover {
+      border: $colorGrey solid 2px;
+    }
+    &:focus {
+      outline: none;
+    }
+    &:focus-visible {
+      border: $colorWhite solid 2px;
+      outline: $colorBlueMed solid 2px;
+      outline-offset: 0px;
+    }
+    .photo-icon {
+      padding-right: 5px;
+    }
   }
-  &:hover {
-    border: $colorGrey solid 2px;
-  }
-  &:focus {
-    outline: none;
-  }
-  &:focus-visible {
-    border: $colorWhite solid 2px;
-    outline: $colorBlueMed solid 2px;
-    outline-offset: 0px;
-  }
-}
-
-.show-photo-grid {
-  position: relative;
-  .MuiGrid-item {
-    padding: 4px;
-  }
-}
-
-.photo-icon {
-  padding-right: 5px;
-  width: 32px;
 }
 
 // park photo gallery
@@ -313,7 +248,7 @@
   right: 16px;
 }
 
-// Section headers (replacing MUI)
+// Section headers
 h2.section-heading {
   position: relative;
   padding-bottom: 2rem;
@@ -330,20 +265,18 @@ h2.section-heading {
   }
 }
 
-// Park header (replacing MUI)
-
-// remove the !important once MUI is gone
+// Park header
 #park-header-container {
   .card-parent {
     .card-child {
-      font-size: 0.875rem !important;
+      font-size: 0.875rem;
       img {
         width: 32px;
         height: 32px;
       }
       a {
         flex: 1 1 100%;
-        font-size: 0.875rem !important;
+        font-size: 0.875rem;
         &:hover, &:focus-visible {
           color: $colorBlue;
           text-decoration: underline;
