--- a/src/admin/src/components/page/appDashboard/AppDashboard.css
+++ b/src/admin/src/components/page/appDashboard/AppDashboard.css
@@ -45,6 +45,12 @@
   font-size: 17px !important;
 }
 
+@media (max-width: 767.98px) {
+  .app-tab {
+    display: none !important;
+  }
+}
+
 @media (max-width: 991.98px) {
   .app-tabs {
     height: unset !important;
