CM-184: Add space to the select field not to overwrap text and icon (#1306)

--- a/src/admin/src/components/composite/dataTable/DataTable.css
+++ b/src/admin/src/components/composite/dataTable/DataTable.css
@@ -11,7 +11,7 @@
 }
 
 .data-table .MuiTableCell-root input,
-.data-table .MuiTableCell-root .MuiInput-input{
+.data-table .MuiTableCell-root .MuiInput-input {
   height: 32px;
   color: var(--color-blue);
   background-color: #f0f2f5;
@@ -19,6 +19,10 @@
   line-height: 2rem;
   margin: 2px 0px 2px 0px !important;
   padding: 2px !important;
+}
+
+.data-table .MuiTableCell-root .MuiSelect-root {
+  padding-right: 24px !important;
 }
 
 .data-table .MuiTablePagination-input {
