CMS-210: Add flex wrap to breadcrumbs (#1317)

--- a/src/gatsby/src/styles/global.scss
+++ b/src/gatsby/src/styles/global.scss
@@ -500,6 +500,7 @@ button.btn:not(.btn-link) {
 nav.breadcrumbs {
   ol {
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
     li {
