CMS-192: Fix park name search placeholder colour (#1329)

--- a/src/gatsby/src/styles/search.scss
+++ b/src/gatsby/src/styles/search.scss
@@ -750,6 +750,9 @@ a.mobile-park-link {
         background-color: transparent;
         text-decoration: underline !important;
       }
+      &.disabled {
+        color: $colorGreyMed !important;
+      }
       &.no-suggestion-text {
         cursor: default;
         text-decoration: none;
