CMS-218: Fix link card styling (#1330)

--- a/src/gatsby/src/styles/pageContent/linkCard.scss
+++ b/src/gatsby/src/styles/pageContent/linkCard.scss
@@ -18,6 +18,7 @@
   .card-img {
     height: 65%;
     overflow: hidden;
+    border-radius: 0;
     margin-bottom: unset;
     transition: border-left-width 250ms linear;
     img {
