CMS-222: Fix mobile megamenu issue (#1332)

--- a/src/gatsby/src/styles/megaMenu/megaMenu.scss
+++ b/src/gatsby/src/styles/megaMenu/megaMenu.scss
@@ -92,7 +92,7 @@ nav {
   }
 
   .mega-menu.menu-mode--responsive.menu-open {
-    height: 1000px;
+    height: 100vh;
   }
   .mega-menu.menu-mode--responsive.menu-closed {
     height: 0px;
