--- a/src/gatsby/src/styles/search.scss
+++ b/src/gatsby/src/styles/search.scss
@@ -35,25 +35,33 @@ h3.subtitle {
     position: static;
     margin-bottom: 8px;
     padding: 0;
-    input.form-check-input {
-      width: 2rem;
-      height: 2rem;
-      position: static;
-      border-color: $colorGreyMed;
+    input[type=checkbox] {
+      // reset default styles
+      -webkit-appearance: none;
+      appearance: none;
+      // set new styles
+      width: 32px;
+      height: 32px;
+      position: relative;
+      background-color: $colorWhite;
+      border: 1px solid $colorGreyMed;
       border-radius: 4px;
       cursor: pointer;
       margin: 0;
       &:checked::before {
         display: inline-block;
-        width: 2rem;
-        height: 2rem;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 0;
+        left: 0;
         content: "\f00c";
         font-family: "Font Awesome 5 Free";
         font-weight: 900;
         font-size: 1rem;
         color: $colorWhite;
         background-color: $colorBlue;
-        border-radius: 4px;
+        border-radius: 3px;
         padding: 4px 0 0 8px;
       }
     }
