CMS-190: Fix layout issue on static landing page (#1344)
* CMS-190: Fix layout issue on static landing page

* CMS-190: Display breadcrumbs on static landing page

--- a/src/gatsby/src/styles/staticLanding1.scss
+++ b/src/gatsby/src/styles/staticLanding1.scss
@@ -36,6 +36,9 @@
       height: auto;
       margin-left: auto;
       order: 2;
+      width: 50vw;
+    }
+    @media screen and (min-width: 1440px) {
       width: 720px;
     }
   }
